Add indicator for my listings

--- a/Private Listings.html
+++ b/Private Listings.html
@@ -1794,10 +1794,12 @@
 	<a href="https://www.spitogatos.gr/mySpitogatos#searches" title="#searches" rel="nofollow">
 		Αναζητήσεις (0)	</a>
 </li>
+<div class="start-indicator">
 <li class="myAdvertisements">
-	<a href="https://www.spitogatos.gr/mySpitogatos#privateListings" title="#privateListings" rel="nofollow">
-		Οι αγγελίες μου (0)	</a>
+	<a href="my-listings.html" title="#privateListings" rel="nofollow">
+		Οι αγγελίες μου (1)	</a>
 </li>
+<div class="end-indicator">
 <li class="myProfile">
 	<a href="https://www.spitogatos.gr/mySpitogatos#profile" title="#profile" rel="nofollow">
 		Το προφίλ μου	</a>
